# bonsai-sensei

./: .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  planning-workflow.md  pyproject.toml  run_docker.sh  send_message.sh
bonsai_sensei/: Dockerfile  README.md  __init__.py  admin_config.py  logging_config.py  main.py  model_factory.py  observability.py  pyproject.toml
bonsai_sensei/alembic/: env.py
bonsai_sensei/alembic/versions/: e1f2a3b4c5d6_add_fertilization_plan.py  f1a2b3c4d5e6_add_goal_to_fertilization_plan.py  h1i2j3k4l5m6_add_category_to_species.py  i1j2k3l4m5n6_add_pest.py  j1k2l3m4n5o6_add_development_plan.py  k2l3m4n5o6p7_add_user_id_to_entities.py  l3m4n5o6p7q8_add_work_doc_links.py
bonsai_sensei/api/: __init__.py  advice.py  bonsai.py  fertilizers.py  phytosanitary.py  phytosanitary_plans.py  routes.py  species.py  telegram_routes.py  transcripts.py  user_settings.py  weather.py  wiki.py  wiki_index.py  wiki_review.py
bonsai_sensei/database/: __init__.py  bonsai.py  session.py  session_wrapper.py  species.py
bonsai_sensei/docs/: image_prompts.md  issues.md  roadmap.md  stack.md  vision.md
bonsai_sensei/domain/: bonsai.py  bonsai_history.py  bonsai_photo_store.py  care_guide_agent.py  confirmation.py  confirmation_store.py  create_bonsai_species_tool.py  cultivation_plan.py  fertilization_plan.py  fertilizer.py  fertilizer_catalog.py  garden.py  garden_tool.py  herbarium.py  list_species_tool.py  phytosanitary.py  phytosanitary_plan_store.py  phytosanitary_registry.py  planned_work.py  scientific_name_searcher.py  sensei.py  sensei_agent.py  species.py  species_agent.py  species_tools.py  user_settings.py  user_settings_store.py  weather_agent.py  weather_tool.py  web_crawler_tool.py
bonsai_sensei/domain/services/: advisor.py  agents_factory.py  current_date_tool.py  data_services.py  factory.py  fakes.py  human_input.py  mitori.py  sensei.py  shokunin.py  tool_limiter.py  tool_tracer.py  wiki_page.py  wiki_page_tool.py
bonsai_sensei/domain/services/bonsai/: bonsai_tools.py  factory.py  gardener.py
bonsai_sensei/domain/services/cultivation/: cultivation_agent.py  factory.py
bonsai_sensei/domain/services/garden/: add_bonsai_photo.py  analyze_bonsai_photo.py  apply_phytosanitary.py  bonsai_index_page.py  bonsai_tools.py  confirm_apply_fertilizer_tool.py  confirm_apply_phytosanitary_tool.py  confirm_create_bonsai_tool.py  confirm_delete_bonsai_tool.py  confirm_execute_planned_work_tool.py  confirm_record_transplant_tool.py  confirm_update_bonsai_tool.py  create_bonsai.py  delete_bonsai.py  delete_bonsai_photo.py  execute_planned_work.py  factory.py  gardener.py  list_bonsai_photos.py  record_transplant.py  update_bonsai.py
bonsai_sensei/domain/services/kantei/: analyze_bonsai_photo.py  compare_bonsai_photos.py  factory.py  kantei.py  photo_analysis_runner.py  photo_comparison_runner.py
bonsai_sensei/domain/services/species/: botanist.py  herbarium_tools.py  scientific_name_tool.py
bonsai_sensei/knowledge_base/dreamer/: agent.py  memory_reader.py  runner.py  scheduler.py
bonsai_sensei/knowledge_base/ingestion/: channel_page_writer.py  factory.py  knowledge_card_extractor.py  transcript_cleaner.py  transcript_loader.py
bonsai_sensei/knowledge_base/keeper/: agent.py  runner.py  tools.py
bonsai_sensei/knowledge_base/wiki_editor/: agent.py  runner.py
bonsai_sensei/knowledge_base/wiki_index/: entry.py  indexer.py  searcher.py  store.py
bonsai_sensei/memory/: mem0_memory_service.py
bonsai_sensei/src/bonsai_sensei/: logging_config.py  main.py  metrics.py  model_factory.py  observability.py
bonsai_sensei/telegram/: admin_bot.py  bot.py  confirmation_messages.py  error_handler.py  handle_admin_ingest.py  handle_confirmation_callback.py  handle_poll_answer.py  handle_selection_callback.py  handle_user_message.py  handle_user_photo.py  handle_wiki_review_callback.py  handlers.py
bonsai_sensei/telegram/messages/: _formatting.py  botanist_messages.py  garden_messages.py  gardener_messages.py  planning_messages.py  storekeeper_messages.py
bonsai_sensei/tests/acceptance/: conftest.py  docker-compose.acceptance.yml  docker-compose.logs.txt  http_client.py  manage_species_via_advice.py  run_acceptance.sh  stub_kb.py  stub_kb_mcp.py
episodic_memory/: Dockerfile  pyproject.toml
episodic_memory/docs/: issues.md  roadmap.md  stack.md  vision.md
episodic_memory/src/episodic_memory/: graphiti_store.py  logging_config.py  main.py  metrics.py
episodic_memory/tests/acceptance/: conftest.py  docker-compose.acceptance.yml  http_client.py  run_acceptance.sh
episodic_memory/tests/unit/: test_graphiti_store.py
knowledge_base/: Dockerfile  README.md  pyproject.toml
knowledge_base/docs/: issues.md  roadmap.md  stack.md  vision.md
knowledge_base/src/knowledge_base/: admin_config.py  main.py  metrics.py  model_factory.py  wiki_git.py  wiki_page_tools.py  wiki_review_session.py
knowledge_base/tests/acceptance/: conftest.py  docker-compose.acceptance.yml  docker-compose.logs.txt  http_client.py  mcp_client.py  run_acceptance.sh
knowledge_base/tests/unit/: test_wiki_git.py  test_wiki_review_session.py
(+813 files in other folders)
