[project]
name = "bonsai-sensei"
version = "0.1.0"
description = "FastAPI application with uv"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bonsai_sensei"]
