[project]
name = "bonsai-sensei"
version = "0.1.0"
description = "FastAPI application with uv"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "google-adk>=1.22.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bonsai_sensei"]
