[project]
name = "bonsai-sensei"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "deep-translator>=1.11.4",
    "fastapi",
    "google-adk>=2.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "litellm>=1.65.5",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-instrumentation-httpx",
    "opentelemetry-instrumentation-logging",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "sqlmodel>=0.0.31",
    "Pillow>=11.0.0",
    "honcho-ai>=2.1.2",
    "tavily-python>=0.7.19",
    "uvicorn",
    "alembic>=1.18.1",
    "prometheus-client>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bonsai_sensei"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "deepeval>=3.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=7.1.2",
    "pytest-httpserver>=1.1.1",
    "pytest-repeat>=0.9.0",
    "pytest-rerunfailures>=16.0",
    "pytest-xdist>=3.0.0",
    "respx>=0.22.0",
    "pyhamcrest>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_functions = ["should_*", "test_*"]
testpaths = ["tests"]
pythonpath = ["src", "tests/acceptance"]
