[project]
name = "episodic-memory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "graphiti-core[falkordb,google-genai]>=0.29.1",
    "httpx>=0.27",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-sdk",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.2.1",
    "uvicorn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/episodic_memory"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=7.1.2",
    "pyhamcrest>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_functions = ["should_*", "test_*"]
testpaths = ["tests"]
pythonpath = ["src", "tests/acceptance"]
