[project]
name = "knowledge-base"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "fastapi",
    "google-adk>=2.0.0",
    "httpx>=0.27",
    "falkordb>=1.0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "uvicorn",
    "tavily-python>=0.5.0",
    "youtube-transcript-api>=0.6.3",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "prometheus-client>=0.21.0",
    "jinja2>=3.1",
    "fastembed>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge_base"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "aiohttp>=3.10.11",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-bdd>=7.1.2",
    "pyhamcrest>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_functions = ["should_*", "test_*"]
testpaths = ["tests"]
pythonpath = ["src", "tests/acceptance"]
